[package]
name = "crustabri"
authors = ["Jean-Marie Lagniez <lagniez@cril.fr>", "Emmanuel Lonca <lonca@cril.fr>", "Jean-Guy Mailly <jean-guy.mailly@u-paris.fr>"]
license = "GPL-3.0-or-later"
version = "0.1.0"
description = "An argumentation framework library & solver."
categories = ["command-line-utilities", "science"]
keywords = ["argumentation", "frameworks", "AF", "solver"]
edition = "2021"
default-run = "crustabri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crustabri"
path = "src/lib.rs"

[[bin]]
name = "crustabri"
path = "src/main.rs"

[[bin]]
name = "crustabri_iccma23"
path = "src/main_iccma23.rs"

[dependencies]
anyhow = "1.0.65"
cadical = { git = "https://github.com/elonca/cadical-rs.git", rev = "f6bd96c" }
chrono = "0.4.19"
clap = "2.33.3"
fern = { version = "0.6.0", features = ["colored"] }
lazy_static = "1.4.0"
log = "0.4.20"
permutator = "0.4.3"
regex = "1.6.0"
strum = "0.24.1"
strum_macros = "0.24.1"
sysinfo = "0.23.13"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
paste = "1.0.11"
predicates = "2.1"
