[package]
name = "scalop"
authors = ["Jean-Marie Lagniez <lagniez@cril.fr>", "Emmanuel Lonca <lonca@cril.fr>", "Jean-Guy Mailly <jean-guy.mailly@irit.fr>"]
license = "GPL-3.0-or-later"
version = "2.0.0"
description = "Scalop, an argumentation solver."
categories = ["command-line-utilities", "science"]
keywords = ["argumentation", "frameworks", "AF", "solver"]
repository = "https://github.com/crillab/crustabri"
edition = "2021"
default-run = "scalop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scalop"
path = "src/lib.rs"

[[bin]]
name = "scalop"
path = "src/main.rs"

[[bin]]
name = "scalop_iccma23"
path = "src/main_iccma23.rs"
required-features = ["iccma"]

[[bin]]
name = "scalop_iccma25"
path = "src/main_iccma25.rs"
required-features = ["iccma"]

[features]
iccma = []

[dependencies]
anyhow = "1.0.65"
cadical = "0.1.14"
chrono = "0.4.19"
clap = "2.33.3"
fern = { version = "0.6.0", features = ["colored"] }
ipasir-loading = "0.1"
lazy_static = "1.4.0"
log = "0.4.20"
permutator = "0.4.3"
regex = "1.6.0"
strum = "0.24.1"
strum_macros = "0.24.1"
sysinfo = "0.30"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
paste = "1.0.11"
predicates = "2.1"
